--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,9 @@
             </header>
 
             <h1 class="contact-head">Contact me!</h1>
-            <div class="contact-icon">
-                <a href="mailto:laurensaloio5@gmail.com"><img class="contact-icon" src="images/email.tiff" alt="Email icon"></a>
-            </div>
-            <div class="contact-icon">
-                <a href="https://www.linkedin.com/in/laurensaloio"><img class="contact-icon" src="images/linkedin.tiff" alt="LinkedIn icon"></a>
-            </div>
+            <ul>
+                <li><a href="mailto:laurensaloio5@gmail.com">Email Me</a></li>
+                <li><a href="https://www.linkedin.com/in/laurensaloio">See My LinkedIn</a></li>
+            </ul>
         </body>
     </html>
