--- a/technical.html
+++ b/technical.html
@@ -35,9 +35,15 @@
 
         <main>
             
-            <h1 class="portfolio-title">Technical Writing Samples</h1>
-
             <h2 class="sample-head">
+                <a href="exercises/pdf/GEMACArticleFinalDraft.pdf">Article on NASA's Electromagnetic Anechoic Chamber (PDF)</a>
+            </h2>
+                <p class="portfolio-paragraph">
+                    <iframe class="last-sample" src="exercises/pdf/GEMACArticleFinalDraft.pdf" height="300" width="400"></iframe>
+                    The following writing sample is an article that I wrote during my internship at NASA's Goddard Space Flight Center. I interviewed the antenna engineers that work with the Electromagnetic Anechoic Chamber (a radio-proof chamber that is used to test the antennas of spacecraft) in order to learn more about the chamber. I also worked with the Office of Communications at Goddard to write this complex article in a way that is understandable for the general public. This is a recent draft of the article, but the final version will be publised at <a href = "https://www.nasa.gov">NASA's official website</a> in the near future.
+                </p>
+
+            <h2 class="portfolio-head">
                 <a href="exercises/pdf/internship-sample.pdf">Documentation for the UMass Center for Data Science and Red Cross project (PDF)</a>
             </h2>
                 <p class="portfolio-paragraph">
