Update index.html about me paragraph

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
             </div>
 
             <div class="aboutmeparagraph">
-                <p class="fancy-text"><em>I am currently a senior at the University of Massachusetts Amherst, studying English with a Certificate in Professional Writing and Technical Communication.</em></p>
-                <p> As someone that has always been interested in science/technology and reading/writing, I knew technical writing would be the perfect career path for me.
-                    This semester, I interned as a Technical Writer for the Center for Data Science at UMass Amherst. Through my internship, I had the opportunity to apply skills in Git, Markdown, VS Code, command lines, and more in order to edit and write technical documentation. I also worked on writing and editing content for the Center's in-progress website. This has been a great opportunity for me to apply what I have learned in the PWTC certificate program, and has solidified my passion for this career path.
+                <p class="fancy-text"><em>I am a recent graduate from the University of Massachusetts Amherst, where I received a Bachelor's in English and a Certificate in Professional Writing and Technical Communication.</em></p>
+                <p> I have always been interested in science/technology and reading/writing, so I knew technical writing would be the perfect career path for me.
+                    During my last semester, I interned as a Technical Writer for the <strong>Center for Data Science at UMass Amherst</strong>. Through my internship, I had the opportunity to apply skills in Git, Markdown, VS Code, command lines, and more in order to edit and write technical documentation. I also worked on writing and editing content for the Center's in-progress website. 
+                    After I graduated in May of 2023, I spent the summer interning at <strong>NASA's Goddard Space Flight Center</strong> where I did technical writing for their Spacecraft Telecomm Systems.
                 </p>
-                <p class="fancy-text"><em>After I graduate in May of 2023, I will be interning at NASA's Goddard Space Flight Center where I will be doing technical writing and documentation for their Spacecraft Telecomm Systems.</em></p>
+                <p class="fancy-text"><em> My recent internship at NASA was a great opportunity for me to apply what I learned and has solidified my passion for this career path.
+                    I am currently looking for a career in technical writing, science writing, or UX/UI Design.
+                </em></p>
            </div>
        
         </div>
