--- a/resume.html
+++ b/resume.html
@@ -35,23 +35,39 @@
             <hr>
             <br>
             <h2>
+                <strong>OBJECTIVE</strong>
+            </h2>
+            <p>Talented writer and visual communicator with a love for learning. Seeking a position to utilize strong writing, editing, and design skills to create user-friendly and comprehensive content for a dynamic team.</p>
+            <h2>
                 <strong>EDUCATION</strong>
             </h2>
                 <p>University of Massachusetts Amherst</p>
                 <ul class="helvetica">
-                    <li>Bachelor of Arts, Major in English; Sep 2021 - May 2023</li>
+                    <li>Bachelor of Arts, Major in English; Graduated in May 2023</li>
                     <li>Dean's List 2019-2023</li>
                     <li>GPA: 4.0</li>
                 </ul>
             <p><strong>Certificates and Training:</strong> Professional Writing and Technical Communication (PWTC)</p>
-            <p><strong>Relevant Coursework:</strong> Professional Writing, Technical Communication (25-page MS Word manual, 25-page grant proposal, MadCap Flare), Advanced Software for Professional Writers (HTML)</p>
-            <p><strong>Computer Skills:</strong> MS Office (Word, Excel, Powerpoint), Google Drive (Docs, Sheets, Slides), 
-                <br>Intermediate understanding of: Git, GitHub, HTML, and Python</p>
+            <p><strong>Relevant Coursework:</strong> Professional Writing, Technical Communication (25-page MS Word manual, 25-page grant proposal, MadCap Flare website on accessibility design principles for 508 compliance, Adobe InDesign flyer and magazine spread, Adobe Illustrator icons), Advanced Software for Professional Writers (sitemaps, wireframes, HTML/CSS portfolio website)</p>
+            <p><strong>Computer Skills:</strong> Microsoft Office, Google Workspace, Git/GitHub, HTML, CSS, Markdown, VS Code, MadCap Flare, Adobe InDesign, and Adobe Illustrator
+                <br>Basic knowledge of: Python, JavaScript, and ReactJS (coded a basic portfolio website)</p>
             <p><strong>Language Skills:</strong> Moderate Proficiency in Portuguese (reading ability)</p>
                 <br>
             <h2><strong>WRITING EXPERIENCE</strong>
             </h2>
-               <h3 class="lesspadding">
+            
+            <h3 class="lesspadding">
+                <strong>Technical Writing Intern</strong>
+            </h3>
+            <p>NASA's Goddard Space Flight Center; June 2023 - August 2023</p>
+                <ul class="helvetica">
+                    <li>Provided documentation of ongoing and upcoming spacecraft developments, particularly the current developments of telecommunication systems for the Nancy Grace Roman Space Telescope.</li>
+                    <li>Led interviews with the engineers that designed these systems and are leading their development.</li>
+                    <li>Researched and analyzed requirements documents and witnessed the development and testing of spacecraft systems to provide summarized technical reports and papers by predetermined deadlines.</li>
+                    <li>Wrote documentation that captures the detailed design aspects, technical processes, accomplishments, and lessons learned of space flight telecommunication developments that will be published as a scientific paper for engineering conferences.</li>
+                    <li>Wrote an article showcasing Goddard's Electromagnetic Anechoic Chamber that will be published to the general public on NASA's official website.</li>
+                </ul>
+                <h3 class="lesspadding">
                     <strong>Technical Writing Intern</strong>
                 </h3>
                 <p>The Center for Data Science (CDS), University of Massachusetts Amherst; Feb 2023 - Present</p>
@@ -61,8 +77,9 @@
                         <li>Collaborate with developers to create instructions for installing, configuring and using software programs.</li>
                         <li>Coordinate with data scientists to explain data science and machine learning concepts in clear, easy to understand language.</li>
                         <li>Tailor materials to the appropriate audience, including non-technical partners (clients and partner organizations) and technical partners (researchers in the university).</li>
-                        <li>Create engaging blog posts and articles that showcase the work of your team.</li>
                         <li>Work with CDS leadership to establish best practices for creating effective software documentation within student development teams.</li>
+                        <li>Wrote and revised website content for the Center's in-progress websites.</li>
+                        <li>Assisted with the development of UI wireframes and prototypes for their in-progress websites.</li>
                     </ul>
                 <h3 class="lesspadding"> 
                     <strong>Student Ambassador</strong>
