Update technical.html to include heading

--- a/technical.html
+++ b/technical.html
@@ -34,6 +34,8 @@
             </header>
 
         <main>
+
+            <h1 class="portfolio-title">Technical Writing Samples</h1>
             
             <h2 class="sample-head">
                 <a href="exercises/pdf/GEMACArticleFinalDraft.pdf">Article on NASA's Electromagnetic Anechoic Chamber (PDF)</a>
