Update technical.html to include published NASA article

--- a/technical.html
+++ b/technical.html
@@ -37,7 +37,15 @@
 
             <h1 class="portfolio-title">Technical Writing Samples</h1>
 
-            <h2 class="sample-head">
+           <h2 class="sample-head">
+                <a href="https://www.nasa.gov/centers-and-facilities/goddard/nasa-goddards-spiky-antenna-chamber-signaling-success-for-50-years/">Published Article on NASA's Electromagnetic Anechoic Chamber (PDF)</a>
+            </h2>
+                <p class="portfolio-paragraph">
+                    <iframe class="last-sample" src="exercises/pdf/NASA-article.pdf" height="300" width="400"></iframe>
+                    The following writing sample is the final published version of the article that I wrote during my internship at NASA's Goddard Space Flight Center. I interviewed the antenna engineers that work with the Electromagnetic Anechoic Chamber (a radio-proof chamber that is used to test the antennas of spacecraft) in order to learn more about the chamber. I also worked with the Office of Communications at Goddard to write this complex article in a way that is understandable for the general public. The article is published at <a href = "https://www.nasa.gov/centers-and-facilities/goddard/nasa-goddards-spiky-antenna-chamber-signaling-success-for-50-years/">NASA's official website</a>.
+                </p>
+            
+            <h2 class="portfolio-head">
                 <a href="exercises/pdf/overview-handout-PACE-card-game.pdf">Overview Flyer for NASA's PACE Mission Event (PDF)</a>
             </h2>
                 <p class="portfolio-paragraph">
@@ -62,11 +70,11 @@
                 </p>
             
             <h2 class="portfolio-head">
-                <a href="exercises/pdf/GEMACArticleFinalDraft.pdf">Article on NASA's Electromagnetic Anechoic Chamber (PDF)</a>
+                <a href="exercises/pdf/GEMACArticleFinalDraft.pdf">Early Article Draft on NASA's Electromagnetic Anechoic Chamber (PDF)</a>
             </h2>
                 <p class="portfolio-paragraph">
                     <iframe class="last-sample" src="exercises/pdf/GEMACArticleFinalDraft.pdf" height="300" width="400"></iframe>
-                    The following writing sample is an article that I wrote during my internship at NASA's Goddard Space Flight Center. I interviewed the antenna engineers that work with the Electromagnetic Anechoic Chamber (a radio-proof chamber that is used to test the antennas of spacecraft) in order to learn more about the chamber. I also worked with the Office of Communications at Goddard to write this complex article in a way that is understandable for the general public. This is a recent draft of the article, but the final version will be published at <a href = "https://www.nasa.gov">NASA's official website</a> in the near future.
+                    The following writing sample is an early draft of the article that I wrote during my internship at NASA's Goddard Space Flight Center. I interviewed the antenna engineers that work with the Electromagnetic Anechoic Chamber (a radio-proof chamber that is used to test the antennas of spacecraft) in order to learn more about the chamber. I also worked with the Office of Communications at Goddard to write this complex article in a way that is understandable for the general public.
                 </p>
 
             <h2 class="portfolio-head">
