--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     During my last semester, I interned as a Technical Writer for the <strong>Center for Data Science at UMass Amherst</strong>. Through my internship, I had the opportunity to apply skills in Git, Markdown, VS Code, command lines, and more in order to edit and write technical documentation. I also worked on writing and editing content for the Center's in-progress website. 
                     After I graduated in May of 2023, I spent the summer interning at <strong>NASA's Goddard Space Flight Center</strong> where I did technical writing for their Spacecraft Telecomm Systems.
                 </p>
-                <p class="fancy-text"><em> I currently work for the Center for Data Science and Research Computing & Data at UMass Amherst as a Communications Manager and Technical Writer. I am always looking for freelance opportunities where I can use my passion as a writer, learner, and communicator of complex technical topics.
+                <p class="fancy-text"><em> I currently work for the <a href="https://ds.cs.umass.edu">Center for Data Science</a> and <a href="https://www.umass.edu/research-computing/">Research Computing & Data</a> at UMass Amherst as a Communications Manager and Technical Writer. I am always looking for freelance opportunities where I can use my passion for learning and communicating complex technical topics.
                 </em></p>
            </div>
        
